# android_world_agents

./: .gitignore  AGENTS.md  IMPROVED_SUBGOAL_ANALYSIS.md  PROMPTS_SUMMARY.md  README.md  SNAPSHOT_DOCUMENTATION.md  TEXT2GRAD_README.md  advanced_replay.py  batch_analysis.py  demo_function_calling.py  demo_improved_subgoals.py  demo_text2grad.py  fix_init_files.sh  instructions.md  pyproject.toml  pyrightconfig.json  replay_episode.py  report.md  requirements-github.txt  requirements.txt  run_evaluation.py  run_tests.py  sample.json  setup.sh  test_agent.py  test_imports.py  test_prompts.py  test_text2grad_complete.py  test_text2grad_integration.py  textgrad_test.py  verify_framework.py
logs/: 2025-07-24_16-25-15.jsonl
prompts/: base_prompt.txt  few_shot_v1.md  few_shot_v1.txt  gemini_base_prompt.txt  gemini_enhanced_base_prompt.txt  gemini_enhanced_few_shot_v1.txt  gemini_enhanced_reflective_v1.txt  reflective_v1.md  reflective_v1.txt
results/: FilesDeleteFile_base_gpt-4o-mini_7d52a840.json  MarkorDeleteNewestNote_base_gpt-4-turbo-2024-04-09_c775d8e4.json  SystemBrightnessMaxVerify_base_gpt-4-turbo-2024-04-09_1301226f.json  TasksHighPriorityTasks_base_gpt-4-turbo-2024-04-09_b80493ea.json  demo.json
results_textgrad/: SystemBrightnessMin_base_gpt-4o-mini_gemini_trial1.json
src/: __init__.py  agent.py  dense_reward.py  evaluate_reward.py  evaluator.py  function_calling_llm.py  gemini_enhanced_agent.py  gemini_prompting.py  log_episode.py  main.py  prompts.py  run_episode.py  text2grad_agent.py  text2grad_agent_broken.py  text2grad_integration.py  textgrad_opt.py  utils.py
test_env/: README.md  cleanup_test.sh  setup_test.sh  test_installation.sh
test_results/: SystemBrightnessMin_base_gpt-4o-mini_trial1.json
tests/: README_snapshots.md  test_agent.py  test_androidworld_compatibility.py  test_evaluator.py  test_framework.py  test_full_serialization.py  test_function_calling.py  test_function_calling_mock.py  test_imports.py  (+17 more)
(+45 files in other folders)
