[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android_world_agents"
version = "0.1.0"
description = "Enhanced T3A agents for AndroidWorld with few-shot learning and self-reflection capabilities"
authors = [
    {name = "Gyaan Antia"}
]
readme = "README.md"
requires-python = ">=3.8"

# Core dependencies
dependencies = [
    # Core LLM API dependencies
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    
    # Gemini integration dependencies
    "google-generativeai>=0.3.0",
    
    # Data analysis and visualization
    "numpy>=1.24.0,<2.0.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    
    # Image processing
    "pillow>=9.0.0",
    "opencv-python",
    
    # Utilities
    "tqdm>=4.64.0",
    "python-dateutil>=2.8.0",
    "pytest",
    
    # Pin jsonschema to match AndroidWorld requirements
    "jsonschema==4.17.3",
    
    # Text2Grad ML dependencies
    "torch>=2.0.0,<2.3.0",
    "torchvision",
    "torchaudio", 
    "transformers>=4.35.0",
    "accelerate",
    "scikit-learn",
    "trl>=0.10.0,<0.12.0",
    "peft",
    "bitsandbytes",
    "rouge-score",
    "bert-score",
    "wandb",
    "huggingface-hub",
    
    # Note: Jupyter removed due to jsonschema conflict
    # Install manually if needed: pip install jupyter
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "src"

# Pyright configuration for VS Code
[tool.pyright]
include = ["src", "android_world/android_world"]
extraPaths = ["android_world", "src"]
pythonVersion = "3.11"
typeCheckingMode = "off"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportGeneralTypeIssues = "none"
